# c-programming-language

./: README.md  a.out
ch1/: 1wpl.c  consolidateSpaces.c  countLines.c  countSpecials.c  entab.c  foldlines.c  for_fahr2cels.c  hello.c  histogramH.c  sizeof.c  stringReverse.c  trailingWhitespace.c  visibleControls.c  wordcount.c
ch2/: 2-2-alternate-for-loop.c  2-3-htoi.c  2-6-setbits.c  2-7-invert.c
ch3/: ex-3-3.c  ex-3-4-improved-itoa.c  ex-3-5-Implement-itob-arbitrary-base-converter.c
ch4/: atof.c  ex-4-1-strrindex.c  itoa.c
ch4/calc/: config.h.in
ch4/calculator-exercises/: calc.h  getop-new.c
ch4/recursion/: itoa-r.c  reverse-r.c
ch5/: getch.c  getfloat.c
ch5/ex11/: entab  entab.c
ch5/ex13/: alloc.c  extend_array.c  tail.c  tail.h
ch5/ex5/: strcpy_n.c
ch5/ex6/: getline.c  strindex.c
ch5/ex7/: getline.c  qsort.c
ch5/ex9/: ex-5-9.c
chapter1/: basicSyntaxCheck.c  cels2fahr.c  countChar.c  detab.c  eof.c  fahr2cels.c  getchar.c  histogramV.c  histogramWord.c  longestLine.c  longestLineAccurate.c  over80long.c  stripComments.c  symb_const_fahr2cels.c  tabs.c  tabs.h
chapter2/: 2-3-htoi.c  2-4-squeeze.c  2-5-find-match.c
chapter3/: README.md  ex-3-1.c  ex-3-2.c  ex-3-3-description.txt  ex-3-3.c  ex-3-4-improved-itoa.c  ex-3-6-Implement-itoa-arbitrary-field-width.c
chapter4/: README.md  calc.h  calc.h.gch  ex-4-2-rudimentary-calculator.c  getLine.c  getch.c  getop-new.c  getop.c  main.c  stack.c
chapter4/calc/: CMakeLists.txt  config.h.in
chapter4/calc/include/: .CMakeLists.txt.swp
chapter4/calc/src/: calc.h  getch.c  main.c  stack.c
chapter4/calculator-exercises/: calc.h  getLine.c  getch.c  getop-p.c  main.c
chapter4/macros/: a.out  swap-macro.c
chapter4/recursion/: itoa-r.c
chapter5/: README.md  expr  expr.c  getint.c  reverse.c  strcat-n.c  strcat.c  strcmp_n.c  strend.c
chapter5/Exercise 5-6/: a.out  atoi.c  getline.c  itoa.c  reverse.c
chapter5/Exercise 5-7/: alloc.c  main.c  (+3 more)
(+7 files in other folders)
